--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Home </title>
-<link rel="stylesheet" href="CSS/style.css">
+<link rel="stylesheet" href="welcome.css">
 </head>
 
   
