--- a/showcase/telescopes.html
+++ b/showcase/telescopes.html
@@ -4,6 +4,7 @@
         <title>Telecope Showcase</title>
         <meta charset="utf-8">
         <link href="telescopes.css" type="text/css" rel="stylesheet">
+        <link href="../nasa.ico" rel="icon" type="image/x-icon">
     </head>
 <body>
     <h1>Telescope Showcase 🏆</h1>
