--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Home </title>
-<link rel="stylesheet" href="welcome.css">
+  <link rel="stylesheet" href="welcome.css">
+  <link href="nasa.ico" rel="icon" type="image/x-icon">
 </head>
 
   
