--- a/welcome.html
+++ b/welcome.html
@@ -32,7 +32,7 @@
   </div>
   <div class="layer" data-depth="0.3">
     
- <div class="some-more-space1"><a href="https://github.com/kerrse/looking-glass" target="blank">GitHub Repository</a></div>
+ <div class="some-more-space1" id="github_link"><a href="https://github.com/kerrse/looking-glass" target="blank">GitHub Repository</a></div>
     
 <div class="some-space">
       <h3>Authors: Elliott Kerr, Elisha Therene, Isha Rajavel, Prisha Sheth </h3>
