modified:   lookingGlassDescription.css 	modified:   lookingGlassDescription.html

--- a/lookingGlassDescription.html
+++ b/lookingGlassDescription.html
@@ -6,21 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Looking Glass Website</title>
     <link href="lookingGlassDescription.css" rel="stylesheet" type="text/css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
-  
     <link rel="preconnect"  href="https://fonts.gstatic.com" crossorigin>
-    
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
-
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
-
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 
     <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300&display=swap" rel="stylesheet">
@@ -79,12 +71,28 @@
                   </div>
             </div>
             <div class="column">
-                <div class="containerSpitzer">
-                    <img src="spitzer-09 2.jpeg" alt="jwst-08">
-                   <!--<button class="btn">click here</button>-->
-                   <button class="spitzerButton"><a href="spitzerDescription.html">click this link</a></button>
-                 </div>
+              <div class="containerSpitzer">
+                  <img src="spitzer-09 2.jpeg" alt="jwst-08">
+                 <!--<button class="btn">click here</button>-->
+                 <button class="spitzerButton"><a href="spitzerDescription.html">click this link</a></button>
+               </div>
+         </div>
+         <div class="column">
+          <div class="containerSpitzer">
+              <img src="spitzer-09 2.jpeg" alt="jwst-08">
+             <!--<button class="btn">click here</button>-->
+             <button class="spitzerButton"><a href="junoDescription.html">click this link</a></button>
            </div>
+     </div>
+
+     <div class="column">
+      <div class="containerSpitzer">
+          <img src="spitzer-09 2.jpeg" alt="jwst-08">
+         <!--<button class="btn">click here</button>-->
+         <button class="spitzerButton"><a href="voyagerDescription.html">click this link</a></button>
+       </div>
+ </div>
+     
         </div>
       </div>
 
