modified:   index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="layer" data-depth="0.3">
     
  <div class="some-more-space1" id="github_link"><a href="https://github.com/kerrse/looking-glass" target="blank">GitHub Repository</a>
- <a id = "button1">Start Game</a> 
+ <a href="game.php" id="button1">Start Game</a> 
 
  </div>
     
